로그 파일 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8080
-
+spring:
+  profiles:
+    active: local
+logging:
+  config: classpath:logback-${spring.profiles.active}.xml
+---
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/chmap2
